{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 64,
  "lineage": "c8cafa35-ce77-6cb9-2706-1348481d00b9",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:internet-gateway/igw-03213048dd7ce1e62",
            "id": "igw-03213048dd7ce1e62",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-igw",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0d03f2fc8c5e819a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-061d37f1bc78fdc9d",
            "id": "rtb-061d37f1bc78fdc9d",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03213048dd7ce1e62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab03-rtb-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-rtb-public-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d03f2fc8c5e819a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-061d37f1bc78fdc9d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0434d1209f9b6e122",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-061d37f1bc78fdc9d",
            "subnet_id": "subnet-07bfcf6c5f83b3f7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0434d1209f9b6e122",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.this",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-07bfcf6c5f83b3f7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bfcf6c5f83b3f7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-subnet-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-subnet-public-a",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "vpc_id": "vpc-0d03f2fc8c5e819a3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-07bfcf6c5f83b3f7a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:vpc/vpc-0d03f2fc8c5e819a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06334ab9bcce33753",
            "default_route_table_id": "rtb-06c12a9709210a9d7",
            "default_security_group_id": "sg-0a72f46f651c33e0a",
            "dhcp_options_id": "dopt-018f05c8d8ab5dc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d03f2fc8c5e819a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c12a9709210a9d7",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab03-vpc-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-vpc-main",
              "Organization": "tf-core",
              "Project": "lab03"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "vpc-0d03f2fc8c5e819a3",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.workload",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-082ffff62217ce085",
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:instance/i-034ca2007a6980a6b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "tf-core-lab03-iamprofile-instance-web",
            "id": "i-034ca2007a6980a6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f3bade43836656ab"
              }
            ],
            "primary_network_interface_id": "eni-0f3bade43836656ab",
            "private_dns": "ip-10-0-1-182.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-43-200-244-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.244.90",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform",
                  "Organization": "tf-core",
                  "Project": "lab03"
                },
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Organization": "tf-core",
                  "Project": "lab03"
                },
                "throughput": 125,
                "volume_id": "vol-019f921a446be3597",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bfcf6c5f83b3f7a",
            "tags": {
              "Name": "tf-core-lab03-instance-web"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-instance-web",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa62d104abc217d7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "i-034ca2007a6980a6b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.this",
            "module.iam.aws_iam_role.this",
            "module.iam.data.aws_iam_policy.aws_ssm_core_policy",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.workload.aws_security_group.this",
            "module.workload.data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "module": "module.workload",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:security-group/sg-0aa62d104abc217d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa62d104abc217d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-core-lab03-sg-instance-web",
            "name_prefix": "",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-core-lab03-sg-instance-web"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab03-sg-instance-web",
              "Organization": "tf-core",
              "Project": "lab03"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d03f2fc8c5e819a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "sg-0aa62d104abc217d7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.this",
            "module.iam.aws_iam_role.this",
            "module.iam.data.aws_iam_policy.aws_ssm_core_policy",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role_policy",
            "module.network.aws_subnet.this",
            "module.network.aws_vpc.this",
            "module.workload.data.aws_ami.amazon_linux"
          ]
        }
      ]
    }
  ]
}